--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-color: #fafafa;
 }
 #summary {
+    background: #a7a8aa;
     width: 100%;
     z-index:999;
     position: fixed;
@@ -14,7 +15,7 @@ body {
     box-shadow: 0px 0px 10px 3px #333;
 }
 #summaryTitle {
-    background: linear-gradient(#2849b1, #0d287f);
+    background: #0d287f;
     color: #fff;
     width: 100%;
     padding: 1em 2em;
