--- a/resources/style.css
+++ b/resources/style.css
@@ -15,7 +15,7 @@ body {
     box-shadow: 0px 0px 10px 3px #333;
 }
 #summaryTitle {
-    background: #0d95bf;
+    background: #243d98;
     color: #fff;
     width: 100%;
     padding: 1em 2em;
